--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>S1 - Lecture 2</h1>
         <ul>
             <li><a href="./Duplicate_Animate_Example/">Clone-Animate</a> – Introduction to three.js</li>
-            <li><a href="./Random_Clones/">Clone-Animate</a> – Introduction to three.js</li>
+            <li><a href="./Random_Clones/">Random-Clones</a> – Introduction to three.js</li>
         </ul>
     </body>
 </html>
