--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <body>
         <h1>S1 - Lecture 2</h1>
         <ul>
-            <li><a href="./example1/">Example 1</a> – Introduction to three.js</li>
-            <li><a href="./example2/">Example 2</a> – Introduction to rhino3dm.js and 3DMLoader for three.js</li>
-            <li><a href="./example3/">Example 3</a> - Extends example 2 by adding a mouse click event.</li>
+            <li><a href="./Beacon of Light/">Beacon of light</a> – Sao Paolo</li>
         </ul>
     </body>
 </html>
