--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>S1 - Lecture 2</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>S1 - Lecture 2</h1>
-        <ul>
-            <li><a href="./Beacon of Light/">Beacon of light</a> – Sao Paolo</li>
-        </ul>
+        <h1>
+        <a href="./Beacon of Light/">Beacon of Light</a>
+    </h1>
     </body>
 </html>
