--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>S1 - Lecture 2</title>
-        <link rel="stylesheet" type=“text/css” href="Style.css">
+        <link rel="stylesheet" href="Style.css">
     </head>
     <body>
     <h1>
