--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>S1 - Lecture 2</title>
+        <title>Data Management Assignment 2</title>
         <link rel="stylesheet" href="Style.css">
     </head>
     <body>
